no. of filters changed according to classes

--- a/yolov4-tiny-custom.cfg
+++ b/yolov4-tiny-custom.cfg
@@ -209,7 +209,7 @@ activation=leaky
 size=1
 stride=1
 pad=1
-filters=21
+filters=18  # Filters changed to (classes+5)*3; change only before starting of yolo
 activation=linear
 
 
@@ -260,7 +260,7 @@ activation=leaky
 size=1
 stride=1
 pad=1
-filters=21
+filters=18 # Filters changed to (classes+5)*3; change only before starting of yolo
 activation=linear
 
 [yolo]
